WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277027
[WebGPU] Render bundle replay should terminate when submit will be invalid
https://bugs.webkit.org/show_bug.cgi?id=277027
Summary
[WebGPU] Render bundle replay should terminate when submit will be invalid
Mike Wyrzykowski
Reported
2024-07-24 13:00:34 PDT
[WebGPU] Render bundle replay should terminate when submit will be invalid
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-07-24 13:00:47 PDT
radar://132409084
Mike Wyrzykowski
Comment 2
2024-07-24 13:10:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31181
EWS
Comment 3
2024-07-31 09:17:05 PDT
Committed
281653@main
(d36f28d11069): <
https://commits.webkit.org/281653@main
> Reviewed commits have been landed. Closing PR #31181 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug