[WebGPU] Render bundle replay should terminate when submit will be invalid https://bugs.webkit.org/show_bug.cgi?id=277027 rdar://132409084

Reviewed by Dan Glastonbury.

We were continuing to encode commands after a validation error
occurred, which triggered a debug assertion in RenderBundleEncoder::recordCommand

* LayoutTests/fast/webgpu/nocrash/fuzz-277027-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277027.html: Added.
* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(setCommandEncoder):
(WebGPU::RenderBundleEncoder::addResource):
(WebGPU::RenderBundleEncoder::drawIndexedIndirect):
(WebGPU::RenderBundleEncoder::drawIndirect):
(WebGPU::RenderBundleEncoder::endCurrentICB):
(WebGPU::RenderBundleEncoder::setBindGroup):
(WebGPU::RenderBundleEncoder::setIndexBuffer):
(WebGPU::RenderBundleEncoder::setVertexBuffer):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::m_maxDrawCount):
(WebGPU::RenderPassEncoder::setCommandEncoder):

Canonical link: https://commits.webkit.org/281653@main